--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,23 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "https://dmaulikr.github.io/hounted-secrets-blog/"
+title   = "Hounted Secrets"
+languageCode = "en-us"
+enableRobotsTXT = true
+
+[pagination]
+  pagerSize = 10
+
+[params]
+  env             = "production"
+  description     = "Daily doses of horror, suspense & mystery."
+  ShowReadingTime = true
+  defaultTheme    = "dark"
+
+[menu]
+  [[menu.main]]
+    name   = "About"
+    url    = "/about/"
+    weight = 10
+
+[module]
+  [[module.imports]]
+    path = "github.com/adityatelange/hugo-PaperMod"
