--- a/hugo.toml
+++ b/hugo.toml
@@ -18,6 +18,4 @@ enableRobotsTXT = true
     url    = "/about/"
     weight = 10
 
-[module]
-  [[module.imports]]
-    path = "github.com/adityatelange/hugo-PaperMod"
+theme = "PaperMod"
