--- a/.github/workflows/review-generator.yml
+++ b/.github/workflows/review-generator.yml
@@ -1,4 +1,5 @@
 name: Review-Generator
+permissions: { contents: write }
 on:
   workflow_dispatch:        # run manually from the Actions tab
   schedule:
