--- a/.github/workflows/review-generator.yml
+++ b/.github/workflows/review-generator.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install openai
+        run: pip install openai==0.28.1
 
       - name: Generate reviews from CSV with AI
         env:
